@@ -80,6 +80,7 @@ const httpserver = http.createServer((req, res) => {
   // acces limite.
   } else if (req.url.startsWith("/cdn/cdnboxStates") || req.url.startsWith("/cdn/config") ||
              req.url.startsWith("/cdn/cdnboxes") || req.url.startsWith("/cdn/console") ||
+             req.url.startsWith("/cdn/applis") || req.url.startsWith("/cdn/appliconsole") ||
              req.url.startsWith("/cdn/api/states") || req.url.startsWith("/cdn/status")) {
 
     if (req.method === 'OPTIONS') {
@@ -94,7 +95,8 @@ const httpserver = http.createServer((req, res) => {
                verifytoken(req)) {
       if (req.url.startsWith("/cdn/cdnboxStates")) {
         res.writeHead(200, { 'Content-Type': 'application/json' });
-        res.end(JSON.stringify(cdnboxStates));
+        res.end(JSON.stringify(cdnboxStates,
+		               (key, value) => { return key == 'countryLookup'?undefined:value; }));
       } else if (req.url.startsWith("/cdn/api/states")) {
         res.writeHead(200, { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" });
         apiStates(req,res);
@@ -108,9 +110,20 @@ const httpserver = http.createServer((req, res) => {
         res.writeHead(200, { "Content-Type": "text/html", "Access-Control-Allow-Origin": "*" });
         htmlcdnboxes(req,res);
         res.end();
+      } else if (req.url.startsWith("/cdn/applis")) {
+        res.writeHead(200, { "Content-Type": "text/html", "Access-Control-Allow-Origin": "*" });
+        htmlapplis(req,res);
+        res.end();
       } else if (req.url.startsWith("/cdn/console")) {
         res.writeHead(200, { 'Content-Type': 'text/html' });
-        htmlconsole(res, buildtoken(req));
+        htmlconsole(res, buildtoken(req),'CDNBoxd Console','/cdn/cdnboxes',
+		    cdnboxStates.config.cdnboxes.length * 25 + 90);
+        res.end();
+      } else if (req.url.startsWith("/cdn/appliconsole")) {
+        res.writeHead(200, { 'Content-Type': 'text/html' });
+        htmlconsole(res, buildtoken(req),'CDNBoxd Applis','/cdn/applis',
+		    Object.keys(cdnboxStates.config.applis).length * 25 + 60);
+//        htmlappliconsole(res, buildtoken(req));
         res.end();
 
       // config API.
@@ -356,9 +369,47 @@ function htmlcdnboxes(req,res) {
   res.write('</table>\n</body>\n</html>');
 }
 
-function htmlconsole(res,token) {
+function htmlapplis(req,res) {
 
-  res.write('<html>\n<header><meta charset="utf-8"><title>CDNBoxes Console</title>\n<script>\n');
+  res.write(
+      '<html>\n<head>\n<meta charset="utf-8">\n' +
+      '<title>' + cdnboxStates.local.config.name + ' CDNBoxes</title>\n' +
+      '<style>' + css + '</style>\n' +
+      '</head>\n<body>\n' +
+      '<div class="head ' +
+          (cdnboxStates.local.config.ishttp?(cdnboxStates.local.status==='on'?'normal':'alert'):'') +
+      '"><span class="name">' +
+      cdnboxStates.local.config.name + '</span>'
+  );
+  var deltatime = (Date.now() - cdnboxStates.starttime) / 1000;
+  res.write(
+      '<span class="uptime"> Up: ' + 
+      Math.floor(deltatime / 3600 / 24) + 'j' + 
+      Math.floor(deltatime / 3600 % 24) + 'h' + 
+      Math.floor(deltatime / 60 % 60) + 'm' + 
+      Math.floor(deltatime % 60) + 's </span>' +
+      '<span class="dnscount">DNS(r/m): ' + Math.round(cdnboxStates.totaldnscount.average) + '</span>' +
+      '</div><table><tr><th>Appli</th><th>Total</th>'
+  );
+  for (const cdnbox of cdnboxStates.config.cdnboxes) {
+    res.write('<th class="boxname">' + cdnbox.name + '</th>');
+  }
+  res.write('</tr>');
+  for (const appli of Object.keys(cdnboxStates.config.applis)) {
+    res.write(
+        '<tr><td class="name">' + appli + '</td>' +
+        '<td class="total number">' + cdnboxStates.applistats[appli].count + '</td>');
+    for (const cdnbox of cdnboxStates.config.cdnboxes) {
+      res.write('<td class="number">' + cdnboxStates.applistats[appli][cdnbox.name].count + '</td>');
+    }
+    res.write( '</tr>');
+  }
+  res.write('</table>\n</body>\n</html>');
+}
+
+function htmlconsole(res,token,title,uri,frameheight) {
+
+  res.write('<html>\n<header><meta charset="utf-8"><title>' + title + '</title>\n<script>\n');
   res.write(`
     function refreshframes() {
       var framelist = document.getElementsByTagName("iframe");
@@ -400,8 +451,8 @@ function htmlconsole(res,token) {
     var cdnboxState = cdnboxStates[cdnboxStates.config.cdnboxes[i].name];
     if (cdnboxState.config.isns) {
       res.write(
-          '<iframe width="540" height="' + (cdnboxStates.config.cdnboxes.length * 25 + 90) + '" src="' +
-          cdnboxState.config.proto + '//' + cdnboxState.config.hostname + '/cdn/cdnboxes?' +
+          '<iframe width="540" height="' + frameheight + '" src="' +
+          cdnboxState.config.proto + '//' + cdnboxState.config.hostname + uri + '?' +
           token + '"></iframe>\n'
       );
     }
