@@ -129,6 +129,14 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
     logerror('"error": "Whoami failed !! ' + err);
   }
 
+  cdnboxStates.applistats = {};
+  for (const appli of Object.keys(cdnboxStates.config.applis)) {
+    cdnboxStates.applistats[appli] = { "count": 0 };
+    for (const cdnbox of cdnboxStates.config.cdnboxes) {
+      cdnboxStates.applistats[appli][cdnbox.name] = { "count": 0 };
+    }
+  }
+
   if (lconfig.tlsticketkeys !==  undefined) {
     if (lconfig.tlsticketkeys.ttl ===  undefined) { lconfig.tlsticketkeys.ttl = 86400000; }
     if (lconfig.tlsticketkeys.refresh ===  undefined) { lconfig.tlsticketkeys.refresh = 3600000; }
