@@ -29,8 +29,10 @@ cdnboxStates.loadconfig().then ( () => {
 
 // choix d'une cdnbox
 function choose(reqname, country) {
-  let appli = cdnboxStates.config.applis[reqname.substr(0,reqname.indexOf('.'))];
+  let applistring = reqname.substr(0,reqname.indexOf('.'));
+  let appli = cdnboxStates.config.applis[applistring];
   if (appli === undefined) { return null; }
+  cdnboxStates.applistats[applistring].count++;
   let appcdnbox = appli[0], boxname = appcdnbox.cdnbox, 
       bestScore = cdnboxStates[boxname].score, status = cdnboxStates[boxname].status;
   if (appcdnbox.fixscore !== undefined) { bestScore = appcdnbox.fixscore; }
@@ -105,6 +107,7 @@ function choose(reqname, country) {
       bestScore = score;
     }
   }
+  cdnboxStates.applistats[applistring][boxname].count++;
   return boxname;
 }
 
